:bug: Fix padding on smaller screens when security image is hidden - move SCSS
Original reason:

- The specificity of auth-content and auth-header classes were more because of the addition of #okta-sign-in.
- Because of that anything under .can-remove-beacon .auth-* did not affect anything as id selector was more specific.
- Adding #okta-sign-in to .can-remove-beacon to imporove specificity, so that the padding overloads apply on small screens.

This PR:

- Moving the .can-remove-beacon to top level, so that it respects the #okta-sign-in closure.

--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -60,16 +60,6 @@
     padding-right: 20px;
   }
 
-  // scss-lint:disable IdSelector
-  #okta-sign-in.can-remove-beacon & {
-  // scss-lint:disable IdSelector
-    padding-top: 40px;
-
-    @include max-height-mq(550px) {
-      padding-top: 0;
-    }
-  }
-
   .auth-content-inner {
     position: relative;
   }
@@ -84,13 +74,6 @@
 
 .enroll-choices {
   padding-top: 20px;
-  // scss-lint:disable IdSelector
-  #okta-sign-in.can-remove-beacon & {
-  // scss-lint:disable IdSelector
-    @include max-height-mq(550px) {
-      padding-top: 15px;
-    }
-  }
 }
 
 .no-beacon .auth-content {
